--- a/css/about_style.css
+++ b/css/about_style.css
@@ -77,17 +77,17 @@ body {
 h1,
 h2,
 h3 {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 p,
 li {
-  font-family: Avenir, Futura, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Neue, Helvetica, Arial, sans-serif;
 }
 
 .intro p {
   -webkit-margin-before: 0;
-  font-family:Handlee, Future, Helvetica, sans-serif;
+  font-family:Handlee, Helvetica, sans-serif;
   }
 
 .intro h2 {
@@ -106,4 +106,9 @@ li {
 
 .main-text p {
   text-align: center;
+}
+
+.back h6 {
+  text-align: center;
+  text-transform: uppercase;
 }
