--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,169 @@
-.jumbotron {
+/*home page*/
+
+.jumbotron-index {
   background-image: url("../img/mountain-2.jpg");
   background-size: cover;
 }
-.jumbotron p {
+.jumbotron-index p {
   color: white;
 }
-.jumbotron h1 {
+.jumbotron-index h1 {
   color: white;
+  text-align:center;
+}
+
+.container-index {
+  text-align: center;
+}
+
+.column-index {
+  text-align: center;
+  background-color: #ade6d8;
+  border-radius: 10px;
+  margin: 10px;
+  width: 30%;
+}
+
+.row-index {
+  display: inline-block;
+}
+
+#welcome-index {
+  font-family: Handlee, Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+/*about page*/
+
+.container-about {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.header-about h1 {
+  text-align:center;
+  margin: 20px;
+  text-transform: uppercase;
+}
+
+.image-about {
+  display: inline-block;
+  float: left;
+  padding-right:20px;
+  margin-right: 15px;
+  margin-left: 20px;
+}
+
+.intro-about {
+  text-align: center;
+  background-color: #ade6d8;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.column-about {
+  display: inline-block;
+  float: left;
+  width: 30%;
+  padding: 0px;
+  height: 204px;
+  border-radius: 10px;
+}
+
+.main-text {
+  clear:both;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+#about-image {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.skills-about {
+  background-color: #f58b75;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+#skills-list-about {
+  margin-left: 50px;
+}
+
+/*contact page*/
+
+.jumbotron-contact {
+  background-image: url("../img/pineapple.jpg");
+  background-size: cover;
+  height: 350px;
+  width: 100%;
+  line-height: 350px;
+}
+
+.jumbotron-contact h1 {
+  color: #f58b75;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.column-contact {
+  display:inline-block;
+  float: left;
+  width: 45%;
+  background-color: #f58b75;
+  border-radius:10px;
+  height: 170px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.together-contact {
+  text-align:center;
+  margin-left:30px;
+}
+
+.connect-contact {
+  text-align: center;
+}
+
+ /*Typography*/
+
+h1,
+h2,
+h3 {
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+p,
+li {
+  font-family: Helvetica, Neue, Helvetica, Arial, sans-serif;
+}
+
+.intro-about p {
+  -webkit-margin-before: 0;
+  font-family:Handlee, Helvetica, sans-serif;
+  }
+
+.intro-about h2 {
+  font-family: Handlee, Helvetica, Futura, Arial, sans-serif;
+}
+
+.skills-about h3 {
+  text-align: center;
+  /*text-transform: uppercase;*/
+}
+
+.main-about h3 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.main-about p {
+  text-align: center;
+}
+
+.back h6 {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
