--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,22 +1,57 @@
-* { box-sizing: border-box; }
-
-body {
-  background-color: #ffffff;
-  color: #34495e;
+.body-about {
+  padding-top: 70.5px;
 }
 
-.container {
-  width: 80%;
+.nav-about {
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  padding: 20px 10px 20px;
+}
+
+.nav-about ul {
+  float: right;
+  margin-right: 35px;
+}
+
+.nav-about ul li {
+  display:inline-block;
+  text-transform: uppercase;
+  letter-spacing: .05em;
+  font-family: Handlee, Helvetica, sans-serif;
+}
+
+.nav-about ul li a {
+  color: black;
+  text-decoration: none;
+  transition: color 600ms
+  web-transition:color 600ms;
+}
+
+.nav-about ul li a:hover {
+  color: #ade6d8;
+  text-decoration: none;
+}
+
+.container-about {
+  width: 100%;
   margin: 0 auto;
+  background-image: url("../img/about.jpg");
+  background-size:cover;
+  height: 250px;
+  line-height: 250px;
 }
 
-.header h1 {
-  text-align:center;
+.header-about h1 {
+  text-align:left;
   margin: 20px;
   text-transform: uppercase;
+  vertical-align: middle;
+  color: white;
 }
 
-.image {
+.image-about {
   display: inline-block;
   float: left;
   padding-right:20px;
@@ -24,55 +59,41 @@ body {
   margin-left: 20px;
 }
 
+.row-about {
+  margin: 10px 10px 10px 145px;
+}
+
 .intro {
   text-align: center;
   background-color: #ade6d8;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
-.column {
+.skills {
+  background-color: #ade6d8;
+}
+
+.column-about {
   display: inline-block;
   float: left;
-  width: 30%;
-  padding: 0px;
+  width: 40%;
+  padding: 10px;
   height: 204px;
   border-radius: 10px;
-
+  margin: 10px;
 }
 
 .main-text {
   clear:both;
   padding-top: 5px;
   padding-bottom: 5px;
+  text-align: center;
 }
 
-#about {
+#about-image {
   width: 100%;
   border-radius: 10px;
 }
-
-/*.intro h2 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}*/
-
-.skills {
-  background-color: #f58b75;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-/*.skills h3 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}*/
-
-#skills-list {
-  margin-left: 50px;
-}
-
-/*Typography*/
+ /*Typography*/
 
 h1,
 h2,
@@ -91,12 +112,17 @@ li {
   }
 
 .intro h2 {
-  font-family: HandLee, Helvetica, Futura, Arial, sans-serif;
+  font-family: Handlee, Helvetica, Futura, Arial, sans-serif;
 }
 
 .skills h3 {
   text-align: center;
+  font-family: Handlee, Helvetica, Futura, Arial, sans-serif;
   /*text-transform: uppercase;*/
+}
+
+#skills-list li {
+  font-family: Handlee, Helvetica, Futura, Arial, sans-serif;
 }
 
 .main-text h3 {
@@ -111,4 +137,4 @@ li {
 .back h6 {
   text-align: center;
   text-transform: uppercase;
-}
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
