--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -1,6 +1,6 @@
 /*contact page*/
 
-.nav-about {
+.nav-contact {
   background-color: white;
   position: fixed;
   width: 100%;
@@ -8,26 +8,26 @@
   padding: 20px 10px 20px;
 }
 
-.nav-about ul {
+.nav-contact ul {
   float: right;
   margin-right: 35px;
 }
 
-.nav-about ul li {
+.nav-contact ul li {
   display:inline-block;
   text-transform: uppercase;
   letter-spacing: .05em;
   font-family: Handlee, Helvetica, sans-serif;
 }
 
-.nav-about ul li a {
+.nav-contact ul li a {
   color: black;
   text-decoration: none;
   transition: color 600ms
   web-transition:color 600ms;
 }
 
-.nav-about ul li a:hover {
+.nav-contact ul li a:hover {
   color: #ade6d8;
   text-decoration: none;
 }
