--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,123 @@
   font-family: Handlee, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+/*contact page*/
+
+.nav-contact {
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  padding: 20px 10px 20px;
+}
+
+.nav-contact ul {
+  float: right;
+  margin-right: 35px;
+}
+
+.nav-contact ul li {
+  display:inline-block;
+  text-transform: uppercase;
+  letter-spacing: .05em;
+  font-family: Handlee, Helvetica, sans-serif;
+}
+
+.nav-contact ul li a {
+  color: black;
+  text-decoration: none;
+  transition: color 600ms
+  web-transition: color 600ms;
+}
+
+.nav-contact ul li a:hover {
+  color: #ade6d8;
+  text-decoration: none;
+}
+
+.main-contact {
+  background-image: url("../img/pineapple.jpg");
+  background-size: cover;
+  height: 350px;
+  width: 100%;
+  line-height: 350px;
+}
+
+.main-contact h1 {
+  color: black;
+  text-align: center;
+}
+
+.together-contact {
+  text-align:center;
+  margin-left:55px;
+}
+
+.column-contact {
+  display:inline-block;
+  float: left;
+  width: 45%;
+  background-color: #ade6d8;
+  border-radius:10px;
+  height: 170px;
+  margin-right: 10px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.connect-contact {
+  text-align: center;
+}
+
+.glyphicon:hover {
+  color: white;
+  text-decoration: none;
+}
+
+/*FAQ page*/
+
+.main-faq {
+  background-image: url("../img/pexels-photo.jpg");
+  background-size: cover;
+  height: 350px;
+  width: 100%;
+  line-height: 350px;
+}
+
+.main-faq h1 {
+  color: white;
+  text-align: center;
+  padding: 13% 10% 15% 10%;
+}
+
+.panel-header {
+  background-color: #ade6d8;
+  padding: 1%;
+  text-align: center;
+}
+
+#collapseOne {
+  text-align: center;
+}
+
+#collapseTwo {
+  text-align: center;
+}
+
+#collapseThree {
+  text-align: center;
+}
+
+#collapseFour {
+  text-align: center;
+}
+
+#collapseFive{
+  text-align: center;
+}
+
  /*Typography*/
+
 
 h1,
 h2,
