--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,13 @@
 .jumbotron h1 {
   color: white;
   text-align:center;
+  z-index: 1;
 }
 
-.container {
+.container-fluid {
   text-align: center;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .col-md-4 {
@@ -22,6 +25,14 @@
   border-radius: 10px;
   margin: 10px;
   width: 30%;
+}
+
+.portfolio {
+  margin-left: 3%;
+}
+
+.course-goals {
+  margin-right: 2%;
 }
 
 .row {
@@ -34,34 +45,35 @@
 
 /*contact page*/
 
-.nav-contact {
+.nav {
   background-color: white;
   position: fixed;
   width: 100%;
   top: 0;
   padding: 20px 10px 20px;
+  z-index: 1;
 }
 
-.nav-contact ul {
+.nav ul {
   float: right;
   margin-right: 35px;
 }
 
-.nav-contact ul li {
+.nav ul li {
   display:inline-block;
   text-transform: uppercase;
   letter-spacing: .05em;
   font-family: Handlee, Helvetica, sans-serif;
 }
 
-.nav-contact ul li a {
+.nav ul li a {
   color: black;
   text-decoration: none;
   transition: color 600ms
   web-transition: color 600ms;
 }
 
-.nav-contact ul li a:hover {
+.nav ul li a:hover {
   color: #ade6d8;
   text-decoration: none;
 }
@@ -121,9 +133,9 @@
   padding: 13% 10% 15% 10%;
 }
 
-.panel-header {
+.panel-default>.panel-heading {
   background-color: #ade6d8;
-  padding: 1%;
+  /*padding: 1%;*/
   text-align: center;
 }
 
