--- a/css/styles.css
+++ b/css/styles.css
@@ -15,24 +15,19 @@
 
 .container-fluid {
   text-align: center;
+}
+
+.carousel {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-.col-md-4 {
+.intro-home {
   text-align: center;
   background-color: #ade6d8;
-  border-radius: 10px;
-  margin: 10px;
-  width: 30%;
-}
-
-.portfolio {
-  margin-left: 3%;
-}
-
-.course-goals {
-  margin-right: 2%;
+  border-radius: 3%;
+  margin: 1%;
+  padding: 10px;
 }
 
 .row {
@@ -41,6 +36,19 @@
 
 #welcome {
   font-family: Handlee, Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+.container-work {
+  text-align: center;
+}
+
+.col-grid {
+  margin: 1%;
+  display: inline-block;
+}
+
+.img-work {
+  border-radius: 3%;
 }
 
 /*contact page*/
@@ -201,3 +209,5 @@ li {
   text-transform: uppercase;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+
+/*responsive sites*/
