--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,16 @@
-/*all*/
+.body { position: relative; }
 
-.body {
-  position: relative;
+.emilyChadwick { text-transform: uppercase; }
+
+.emilyChadwick a { color: black; }
+
+.anchor {
+  padding-top: 50px;
 }
 
-.emilyChadwick {
-  text-transform: uppercase;
-}
+/*navigation*/
 
-.emilyChadwick a {
-  color: black;
-}
-
-.navbar {
-  background-color: white;
-  /*position: fixed;
-  width: 100%;
-  top: 0;
-  padding: 20px 10px 20px;
-  z-index: 1;*/
-}
-
-/*.nav ul {
-  float: right;
-  margin-right: 35px;
-}
-
-.nav ul li {
-  display:inline-block;
-  text-transform: uppercase;
-  letter-spacing: .05em;
-  font-family: Handlee, Helvetica, sans-serif;
-}
-
-.nav ul li a {
-  color: black;
-  text-decoration: none;
-  transition: color 600ms
-  web-transition: color 600ms;
-}*/
+.navbar { background-color: white; }
 
 .navbar-inverse .navbar-nav>li>a:hover{
   color: teal;
@@ -50,25 +22,15 @@
   border-color:teal;
 }
 
-.navbar-inverse .navbar-toggle:hover {
-  background-color: teal;
-}
+.navbar-inverse .navbar-toggle:hover { background-color: teal; }
 
-.navbar-inverse .navbar-toggle:focus {
-  background-color: teal;
-}
+.navbar-inverse .navbar-toggle:focus { background-color: teal; }
 
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-  background-color: teal;
-}
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover { background-color: teal; }
 
-.item img {
-  width: 100%;
-}
+/*index page*/
 
-.anchor {
-  padding-top: 50px;
-}
+.item img { width: 100%; }
 
 .slide h1 {
   position: absolute;
@@ -78,37 +40,7 @@
   top: 45%;
 }
 
-.slide h4 {
-  position: absolute;
-  color: white;
-  width: 100%;
-  top: 45%;
-}
-
-.btn-default:hover {
-  color: teal;
-}
-
-/*home page*/
-
-.jumbotron {
-  background-image: url("../img/mountain-2.jpg");
-  background-size: cover;
-}
-
-.jumbotron h1 {
-  color: white;
-  text-align:center;
-  z-index: 1;
-}
-
-.jumbotron p {
-  color: white;
-}
-
-.container-fluid {
-  text-align: center;
-}
+.container-fluid { text-align: center; }
 
 .carousel {
   margin-left: -15px;
@@ -123,17 +55,25 @@
   padding: 10px;
 }
 
-.intro-home h2 {
-  color: teal;
+.intro-home h2 { color: teal; }
+
+.row-index { display: inline-block; }
+
+/*portfolio page*/
+
+.container-work { text-align: center; }
+
+.col-grid {
+  margin: 1%;
+  text-align: center;
 }
 
-.row-index {
-  display: inline-block;
+.img-work {
+  border-radius: 3%;
+  margin: 0 auto;
 }
 
-#welcome {
-  font-family: Handlee, Helvetica Neue, Helvetica, Arial, sans-serif;
-}
+#portfolio h1 { color: teal; }
 
 /*about page*/
 
@@ -154,6 +94,17 @@
   padding-top: 8%;
 }
 
+.main-text {
+  clear:both;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+.main-text p { padding-top: 2%; }
+
+.main-text h2 { color: teal; }
+
 .about-col {
   margin: 3%;
   padding-top: .5%;
@@ -163,35 +114,7 @@
   border-radius: 3%;
 }
 
-.main-text {
-  clear:both;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: center;
-}
-
-.main-text p {
-  padding-top: 2%;
-}
-
-/*portfolio page*/
-
-.container-work {
-  text-align: center;
-}
-
-.col-grid {
-  margin: 1%;
-  display: inline-block;
-}
-
-.img-work {
-  border-radius: 3%;
-}
-
-#portfolio h1 {
-  color: teal;
-}
+.about-col h2 { color: teal; }
 
 /*FAQ page*/
 
@@ -215,36 +138,17 @@
   text-align: center;
 }
 
-#collapseOne {
-  text-align: center;
-}
+#collapseOne { text-align: center; }
 
-#collapseTwo {
-  text-align: center;
-}
+#collapseTwo { text-align: center; }
 
-#collapseThree {
-  text-align: center;
-}
+#collapseThree { text-align: center; }
 
-#collapseFour {
-  text-align: center;
-}
+#collapseFour { text-align: center; }
 
-#collapseFive{
-  text-align: center;
-}
+#collapseFive{ text-align: center; }
 
 /*contact page*/
-
-/*.contact-image {
-  background-image: url("../img/pineapple.jpg");
-  background-size: cover;
-  height: 350px;
-  line-height: 350px;
-  margin-left: -15px;
-  margin-right: -15px;
-}*/
 
 #contact {
   background-image: url("../img/contact-2.jpg");
@@ -257,6 +161,15 @@
   padding: 100px;
   padding-top: 50px;
   height: 400px;
+}
+
+#contact h1 { text-align: center; }
+
+#contact h4 a { color: white; }
+
+#contact h4 a:hover {
+  color: #ade6d8;
+  text-decoration: none;
 }
 
 .header-contact h1 {
@@ -272,66 +185,12 @@
   text-decoration: none;
 }
 
-#contact h1 {
-  text-align: center;
-}
-
-#contact h4 a {
-  color: white;
-}
-
-#contact h4 a:hover {
-  color: #ade6d8;
-  text-decoration: none;
-}
-
  /*Typography*/
 
 h1,
 h2,
-h3 {
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-}
-
+h3,
 p,
 li {
-  font-family: Helvetica, Neue, Helvetica, Arial, sans-serif;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-
-.intro p {
-  -webkit-margin-before: 0;
-  font-family:Handlee, Helvetica, sans-serif;
-  }
-
-.intro h2 {
-  font-family: Handlee, Helvetica, Futura, Arial, sans-serif;
-}
-
-.about-col h2 {
-  font-family: Helvetica, Futura, Arial, sans-serif;
-  color: teal;
-}
-
-.about-col li {
-  font-family: Helvetica, Futura, Arial, sans-serif;
-}
-
-.skills h3 {
-  text-align: center;
-  /*text-transform: uppercase;*/
-}
-
-.main-text h2 {
-  text-align: center;
-  color: teal;
-}
-
-.main-text p {
-  text-align: center;
-}
-
-.slide h4 {
-  font-family: Handlee, Helvetica, Futura, Arial, sans-serif;
-}
-
-/*navigation*/
