--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 
 .navbar { background-color: white; }
 
-.navbar-inverse .navbar-nav>li>a:hover{
+.navbar-inverse .navbar-nav>li>a:hover {
   color: teal;
   text-decoration: none;
 }
@@ -193,4 +193,16 @@ h3,
 p,
 li {
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+/*footer*/
+
+footer {
+  padding: 15px;
+  float: right;
+  position: relative; left: -50%;
+}
+
+footer .icons {
+  position: relative; left: 50%;
 }
