--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,15 @@
   text-align: center;
 }
 
-.panel-group { padding-top: 1%; }
+#resume {
+  height: 700px;
+  width: 100%;
+  padding: 10px;
+}
+
+.panel-group {
+  padding-top: 1%;
+}
 
 .panel-default>.panel-heading {
   background-color: teal;
@@ -141,7 +149,7 @@
   text-align: center;
 }
 
-#collapseOne { text-align: center; }
+#collapseOne { text-align: center;}
 
 #collapseTwo { text-align: center; }
 
@@ -150,6 +158,17 @@
 #collapseFour { text-align: center; }
 
 #collapseFive{ text-align: center; }
+
+.learn-more {
+  text-align: left;
+  float: left;
+  padding: 15px;
+}
+
+.modal-button {
+  float: right;
+  padding: 15px;
+}
 
 /*contact page*/
 
@@ -211,6 +230,10 @@
 
 .btn {
   margin: 1%;
+  background-color: teal;
+}
+
+.btn-primary:hover {
   background-color: teal;
 }
 
