--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@
 
 .row-index { display: inline-block; }
 
+.top-btn {
+  color: white;
+}
+
 /*portfolio page*/
 
 .container-work { text-align: center; }
@@ -182,10 +186,10 @@
   text-align: center;
   padding: 100px;
   padding-top: 50px;
-  height: 400px;
+  height: 100%;
 }
 
-@media only screen and (max-width: 801px) {
+/*@media only screen and (max-width: 801px) {
   #contact {
     background-image: url("../img/contact-2.jpg");
     height: 500px;
@@ -197,7 +201,7 @@
     background-image: url("../img/contact-2.jpg");
     height: 600px;
   }
-}
+}*/
 
 #contact h1 { text-align: center; }
 
