--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,12 @@
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+#map {
+  height: 250px;
+  width: 250px;
+  margin: 0 auto;
+}
+
 /*navigation*/
 
 .anchor {
